# wordle

./: .editorconfig  Makefile  README.md  pyproject.toml
src/tests/: test_wordle_game.py
src/wordle/: game.py  main.py
src/wordle/screens/: wordle_v0.py  wordle_v1.py
src/wordle/screens/components/: base_component.py  game_board.py  keyboard.py
