[project]
name = "wordle"
version = "0.1.0"
description = "Guess the word!"
authors = [
    {name = "Joeffison Silvério de Andrade", email = "joeffison@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
